--- a/html/main.html
+++ b/html/main.html
@@ -37,7 +37,7 @@
                 <nav>
                   <ul>
                     <li>
-                      <a href="" data-target="Home" aria-label="Trang chủ"
+                      <a href="#" data-target="Home" aria-label="Trang chủ"
                         >Home</a
                       >
                     </li>
